--- a/src/app/styles/LandingPage.module.css
+++ b/src/app/styles/LandingPage.module.css
@@ -15,6 +15,7 @@
 
 .landing-heading h1 {
   font-size: 8rem;
+  font-size: min(8rem, 16vw);
   font-family: 'Under';
 }
 
@@ -24,7 +25,6 @@
 }
 
 .nav {
-  height: 65px;
   width: 100%;
   background-color: white;
   position: relative;
@@ -78,7 +78,6 @@
     opacity: 0.5;
   }
   .landing-heading {
-    width: 100vw !important;
     text-align: center !important;
     justify-content: center !important;
     padding-left: 0 !important;
@@ -199,7 +198,8 @@
 
 .about-container {
   margin-top: 40px;
-  margin-left: 50px;
+  margin-left: 40px;
+  margin-left: min(40px, 5vw);
   font-family: 'Axiforma';
 }
 
